--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,5 @@
 PORT=4002
 MONGODB_URI="mongodb+srv://rahulkumar:rahul1234@cluster1.wdbxwjd.mongodb.net/chat?retryWrites=true&w=majority"
 NODE_ENV="production"
-JWT_TOKEN=0hTa4U+5hJkjUektQIwImgAULcz7FQe1APCxaRyicz8=
+JWT_SECRET="secret"
+# JWT_TOKEN=0hTa4U+5hJkjUektQIwImgAULcz7FQe1APCxaRyicz8=
